--- a/_slides/1.introduction.md
+++ b/_slides/1.introduction.md
@@ -7,6 +7,105 @@ Retrospective
 <style>.help{-webkit-animation-duration:2s;-webkit-animation-name:help;-webkit-animation-direction:alternate;-webkit-animation-iteration-count:infinite;-moz-animation-duration:2s;-moz-animation-name:help;-moz-animation-direction:alternate;-moz-animation-iteration-count:infinite;-o-animation-duration:2s;-o-animation-name:help;-o-animation-direction:alternate;-o-animation-iteration-count:infinite;animation-duration:2s;animation-name:help;animation-direction:alternate;animation-iteration-count:infinite;opacity:0}@-webkit-keyframes help{0%{opacity:0}100%{opacity:1}}@-moz-keyframes help{0%{opacity:0}100%{opacity:1}}@-o-keyframes help{0%{opacity:0}100%{opacity:1}}@keyframes help{0%{opacity:0}100%{opacity:1}}</style>
 <div class="help" style="position: fixed; bottom: 25px; right: 25px; border: 0; font-size: 10px;">PRESS SPACEBAR OR ARROW KEYS</div>
 
+---
+
+# Highlights
+
+1. Two apprentices: Santiago and Matias
+2. Develop our own program: https://github.com/10Pines/10pines-apprenticeship
+3. More than 1400 hours (including apprentices, mentors and program setup)
+4. Programming languages: Ruby, Java, Clojure, Javascript
+5. Frameworks: Sinatra, Rails, Joodo, AngularJS, jQuery
+7. Test tools: Rspec, jUnit, Selenium, Capybara, Jasmine, Speclj
+6. Practices: TDD, Pair Programming, Story Points, Iteration Planning & Demo
+---
+
+---
+data-hyhyhy-state: slides
+---
+
+<style>
+    article.hyhyhy-parent.slides div.separator {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 50%;
+        border-right: 3px solid #8B8282;
+        height: 100%;
+        z-index: 1;
+    }
+
+    article.hyhyhy-parent.slides div.background {
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        width: 50%;
+        height: 100%;
+        z-index: 0;
+        background: #fff;
+    }
+
+    article.hyhyhy-parent.slides div.santi {
+        border-radius: 0px;
+        width: 50%;
+        position: fixed;
+        left: 0px;
+        top: 0%;
+        text-align: left;
+        margin-left: 1em;
+    }
+
+    article.hyhyhy-parent.slides div.mati {
+        width: 50%;
+        position: absolute;
+        right: 0px;
+        top: 0%;
+        left: inherit;
+        text-align: left;
+    }
+
+    article.hyhyhy-parent.slides div.mati {
+        margin-left: 1em;
+    }
+</style>
+
+<div class="separator"></div>
+
+<div class="santi">
+  <h3>
+    <img src="http://dev.10pines.com/assets/team/santiagon-f38758921399956b50e516ecbc1e9445.png" width="50px"/>
+    Santiago
+  </h3>
+  <ol>
+    <li>Katas and exercises: https://github.com/nodarsan</li>
+    <li>Blog: <a href="http://blog.10pines.com/2014/10/01/clojure-multimethods/">State and Polymorphism With Clojure</a></li>
+    <li>Final presentation: NodeJS, CoffeeScript and ExpressJS
+      <ul>
+        <li>Slides: http://es.slideshare.net/snodar/node-lt</li>
+        <li>Code: https://github.com/nodarsan/TicTacToeNODE</li>
+        <li><img src="https://www.dropbox.com/s/l24d7a6o7d8jtr8/photo%201.JPG?dl=1" width="300px"/></li>
+      </ul>
+    </li>
+  </ol>
+</div>
+
+<div class="mati">
+  <h3>
+    <img src="http://dev.10pines.com/assets/team/matiasm-77c1e572e5177fdf9591a7b0a2a0ce88.png" width="50px"/>
+    Matias
+  </h3>
+  <ol>
+    <li>Katas and exercises: https://github.com/matiasmelendi</li>
+    <li>Blog: <a href="http://blog.10pines.com/2014/10/01/clojure-multimethods/">Wrap me up! Smalltalk method wrappers</a></li>
+    <li>Final presentation: Method wrappers in Smalltalk
+      <ul>
+        <li>Slides: http://es.slideshare.net/snodar/node-lt</li>
+        <li>Code: https://github.com/nodarsan/TicTacToeNODE</li>
+        <li><img src="https://www.dropbox.com/s/31m4e54l6a1m6sr/photo%203.JPG?dl=1" width="300px"/></li>
+      </ul>
+    </li>
+  </ol>
+</div>
 
 ---
 
